Sett bootstrapServers på kafkaProperties i test